--- a/style/variables.scss
+++ b/style/variables.scss
@@ -10,6 +10,8 @@
     $spacing-m: 32px;
     $spacing-s: 16px;
     $spacing-xs: 8px;
-    $box-shadow: 0 4px 4px 8px rgba(0,0,0,.25);
+    $box-shadow: 0 4px 4px 8px rgba(0,0,0,.2);
     $svg-normal: 36px;
-    $txt-l: 64px;
+    $txt-l: 24px;
+    $txt-m: 16px;
+    $txt-s: 12px;
